--- a/Mini-Projects/style.css
+++ b/Mini-Projects/style.css
@@ -1,46 +1,133 @@
-/*------------ RestCSS ------------*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+/*------------ Base CSS ------------*/
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+    width: 100%;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-/*------------ Base CSS ------------*/
+body {
+    width: 100%;
+    height: 100%;
+}
+
+.outerBox {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.innerBox {
+    width: 760px;
+}
+.padding20px {
+    padding: 20px 0;
+}
+.bottomPadding20px {
+    padding-bottom: 20px;
+}
+.topPadding20px {
+    padding-top: 20px;
+}
+.bottomPadding10px {
+    padding-bottom: 10px;
+}
+.topPadding10px {
+    padding-top: 10px;
+}
+.bgWhite {
+    background: #fff;
+}
+.fontDarkGray {
+    color: #515357;
+}
+.fontLightGray {
+    color: #808080;
+}
+.fontXXXL {
+    font-size: 36px;
+}
+.fontL {
+    font-size: 14px;
+}
+.fontXL {
+    font-size: 16px;
+}
+.fontWeight600 {
+    font-weight: 600;
+}
+.bgDarkGray {
+    background: #515357;
+}
+/*------------ Header CSS ------------*/
+#image1 {
+    width: 145px;
+    padding: 17.5px 0 0 0;
+}
+#submitTitle {
+    padding: 40px 0;
+}
+
+ /*------------ font ------------*/
+ .lato-thin {
+     font-family: "Lato", sans-serif;
+     font-weight: 100;
+     font-style: normal;
+ }
+
+.lato-light {
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.lato-regular {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.lato-bold {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.lato-black {
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
+
+.lato-thin-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+}
+
+.lato-light-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.lato-regular-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.lato-bold-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+}
+
+.lato-black-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+}
